--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,8 @@ jobs:
                   java-version: '11'
                   distribution: 'adopt'
 
-            - name: Build with Gradle
-              uses: gradle/gradle-build-action@0d13054264b0bb894ded474f08ebb30921341cee
-              with:
-                arguments: build
+            - name: Setup Gradle
+              uses: gradle/gradle-build-action@v2
+
+            - name: Execute Gradle build
+              run: ./gradlew build
