--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,4 +21,12 @@ jobs:
               run: chmod +x ./gradlew
 
             - name: Execute Gradle build
-              run: ./gradlew build
+              run: ./gradlew build -x test
+
+    unit-tests:
+        runs-on: ubuntu-latest
+        name: Unit tests
+        needs: [build]
+        steps:
+            - name: Run unit tests
+              run: ./gradlew build test
