--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,10 +24,4 @@ jobs:
               run: ./gradlew build -x test
 
             - name: Run unit tests
-              run: ./gradlew test
-
-            - name: Run integration tests
-              run: ./gradlew integrationTest
-
-            - name: Run end-to-end tests
-              run: ./gradlew e2eTest
+              run: ./gradlew pyramidTest
