--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,17 +1,16 @@
 name: 'build-test'
 on:
     pull_request:
-    push:
 jobs:
     build:
         runs-on: ubuntu-latest
         steps:
             -   uses: actions/checkout@v3
 
-#            -   name: Set up NodeJS
-#            -   uses: actions/setup-node@v3
-#                with:
-#                    node-version: '12'
+            #            -   name: Set up NodeJS
+            #            -   uses: actions/setup-node@v3
+            #                with:
+            #                    node-version: '12'
 
             -   name: Set up JDK 8
                 uses: actions/setup-java@v3
@@ -41,7 +40,7 @@ jobs:
                 uses: peter-evans/create-or-update-comment@v1
                 if: always()
                 with:
-                    issue-number: 1
+                    issue-number: ${{ github.event.pull_request.number }}
                     body: |
                         Test pyramid:
                         - Unit tests count: **${{ steps.analyze.outputs.unit_count }}**
