--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,10 +42,10 @@ jobs:
                     e2e_count=`cat ./build/reports/test-pyramid.json | jq -r '.e2eCount'`
                     echo "::set-output name=e2e_count::$e2e_count"
 
-                    all_count=$unit_count+$integration_count+$e2e_count
-                    unit_percent=$unit_count/$all_count*100
-                    integration_percent=$integration_count/$all_count*100
-                    e2e_percent=$e2e_count/$all_count*100
+                    all_count=$((unit_count + integration_count + e2e_count))
+                    unit_percent=$((unit_count / all_count * 100))
+                    integration_percent=$((integration_count / all_count * 100))
+                    e2e_percent=$((e2e_count / all_count * 100))
 
                     if [[$unit_percent >= 60]]
                     then
