--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,9 +43,15 @@ jobs:
                     echo "::set-output name=e2e_count::$e2e_count"
 
                     all_count=$(($unit_count + $integration_count + $e2e_count))
+
                     unit_percent=`echo $unit_count / $all_count | bc -l`
+                    echo "::set-output name=unit_percent::$unit_percent"
+
                     integration_percent=`echo $integration_count / $all_count | bc -l`
+                    echo "::set-output name=integration_percent::$integration_percent"
+
                     e2e_percent=`echo $e2e_count / $all_count | bc -l`
+                    echo "::set-output name=e2e_percent::$e2e_percent"
 
                     if [[ $unit_percent > .6 ]]
                     then
@@ -78,6 +84,6 @@ jobs:
                     issue-number: ${{ github.event.pull_request.number }}
                     body: |
                         Test pyramid:
-                        - Unit tests count: **${{ steps.analyze.outputs.unit_count }}**
-                        - Integration tests count: **${{ steps.analyze.outputs.integration_count }}**
-                        - End-to-end tests count: **${{ steps.analyze.outputs.e2e_count }}**
+                        - Unit tests count: **${{ steps.analyze.outputs.unit_count }}** (${{ steps.analyze.outputs.unit_percent }}%)
+                        - Integration tests count: **${{ steps.analyze.outputs.integration_count }}** (${{ steps.analyze.outputs.integration_percent }}%)
+                        - End-to-end tests count: **${{ steps.analyze.outputs.e2e_count }}** (${{ steps.analyze.outputs.e2e_percent }}%)
