--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,6 +43,7 @@ jobs:
                     echo "::set-output name=e2e_count::$e2e_count"
 
                     all_count=$(($unit_count + $integration_count + $e2e_count))
+                    echo "::set-output name=all_count::$all_count"
 
                     unit_percent=`echo $unit_count / $all_count | bc -l`
                     echo "::set-output name=unit_percent::$unit_percent"
@@ -84,6 +85,6 @@ jobs:
                     issue-number: ${{ github.event.pull_request.number }}
                     body: |
                         Test pyramid:
-                        - Unit tests count: **${{ steps.analyze.outputs.unit_count }}** (${{ steps.analyze.outputs.unit_percent }}%)
-                        - Integration tests count: **${{ steps.analyze.outputs.integration_count }}** (${{ steps.analyze.outputs.integration_percent }}%)
-                        - End-to-end tests count: **${{ steps.analyze.outputs.e2e_count }}** (${{ steps.analyze.outputs.e2e_percent }}%)
+                        - Unit tests count: **${{ steps.analyze.outputs.unit_count }}** of ${{ steps.analyze.outputs.all_count }}
+                        - Integration tests count: **${{ steps.analyze.outputs.integration_count }}** of ${{ steps.analyze.outputs.all_count }}
+                        - End-to-end tests count: **${{ steps.analyze.outputs.e2e_count }}** of ${{ steps.analyze.outputs.all_count }}
